엔진 시작옵션에 yourkit profiler 추가.