@@ -18,14 +18,24 @@
 #-------------------------------------------------------------------------------
 #Fastcat start script
 cd `dirname $0`/../
-if [ -n "$FASTCAT_HOME" ]; then IR_HOME=$FASTCAT_HOME; else IR_HOME=`pwd`; fi
+SERVER_HOME=`pwd`
 
-CONF=$IR_HOME/conf
-LIB=$IR_HOME/lib
+CONF=$SERVER_HOME/conf
+LIB=$SERVER_HOME/lib
+
+# PROFILE
+PROFILE_AGENT_LINUX_X86_32=$SERVER_HOME/bin/profile/yourkit/linux-x86-32/libyjpagent.so
+PROFILE_AGENT_LINUX_X86_64=$SERVER_HOME/bin/profile/yourkit/linux-x86-64/libyjpagent.so
+PROFILE_AGENT=PROFILE_AGENT_LINUX_X86_64
+PROFILE_PORT=10001
+
+HEAP_MEMORY_SIZE=512m
 JVM_OPTS="-Xms$HEAP_MEMORY_SIZE -Xmx$HEAP_MEMORY_SIZE -XX:+HeapDumpOnOutOfMemoryError"
 JAVA_OPTS="-server -Dfile.encoding=UTF-8 -Dlogback.configurationFile=$CONF/logback.xml -Dderby.stream.error.file=logs/db.log"
+DEBUG_OPT="-verbosegc -XX:+PrintGCDetails -Dcom.sun.management.jmxremote"
+PROFILE_OPT="-agentpath:$PROFILE_AGENT=port=$PROFILE_PORT"
 
 #for background service
 FASTCAT_CLASSPATH=".:bin"
 for jarfile in `find $LIB | grep [.]jar$`; do FASTCAT_CLASSPATH="$FASTCAT_CLASSPATH:$jarfile"; done
-nohup java -Dserver.home=$IR_HOME $JVM_OPTS $JAVA_OPTS -classpath $FASTCAT_CLASSPATH org.fastcatsearch.server.CatServer $IR_HOME 2>&1 &
+nohup java $JVM_OPTS $JAVA_OPTS -classpath $FASTCAT_CLASSPATH org.fastcatsearch.server.CatServer $SERVER_HOME 2>&1 &
